# MFRMFP

./: README.md  setup.sh
command_threePi/: Comm_Handler.cpp  SSL_comm.hpp  command_threePi  command_threePi.cpp  gen_command.cpp
data/: 1,0_0,0.gnumeric  ThreePiSim_out.csv  ThreePiSim_pose.csv  octave-workspace  plot_data.m
models/1DPlane/: model.config  model.sdf
models/ThreePi/: model.config  model.sdf
plugins/: CMakeLists.txt
plugins/include/: SSL_PosCtrl.hpp
plugins/src/: Plane1D_recorder.cpp  ThreePi_controller_1D.cpp  ThreePi_controller_PD.cpp  ThreePi_controller_POS.cpp  ThreePi_controller_fig8.cpp  ThreePi_recorder.cpp  gazebo_controller_interface_PD.cpp
worlds/: 1D1Rob.world  1RobOn1DPlane.world  1RobOnTheGround.world  4RobOn1DPlane.world  4RobOnTheGround.world  OnTheGround.world
